Remove cache:sbt